@@ -15,7 +15,11 @@ import static com.zidani.gestioncv.personManagment.Permission.*;
 @RequiredArgsConstructor
 public enum Role {
 
-    USER(Collections.emptySet()),
+    USER(
+            Set.of(
+                    USER_CREATE
+            )
+    ),
     ADMIN(
             Set.of(
                     ADMIN_READ,
